--- a/.github/workflows/on-push-in-work-branch.yaml.yml
+++ b/.github/workflows/on-push-in-work-branch.yaml.yml
@@ -55,7 +55,7 @@ jobs:
                     sshpass -p "${{ env.SERVER_PASSWORD }}" ssh -o StrictHostKeyChecking=no root@${{ env.SERVER_HOST }} -p 22 << 'EOF'
                     echo "🔄 Обновляем ветку ${{ env.BRANCH_NAME }} для ${{ env.AUTHOR_NAME }}"
                     
-                    cd kontur/kontur-employee
+                    cd loom/loom-employee
                     git fetch origin
                     
                     # Сохраняем текущую ветку для проверки
@@ -97,13 +97,13 @@ jobs:
                         git checkout -b ${{ env.BRANCH_NAME }} origin/${{ env.BRANCH_NAME }}
                     fi
                     
-                    cd ../kontur-system
+                    cd ../loom-system
                     
                     
                     export $(cat env/.env.app env/.env.db env/.env.monitoring | xargs)
                     
                     echo "🔨 Начинаем сборку контейнера..."
-                    docker compose -f ./docker-compose/app.yaml up -d --build kontur-employee
+                    docker compose -f ./docker-compose/app.yaml up -d --build loom-employee
                     
                     check_health() {
                         # Если есть HTTP endpoint
@@ -136,13 +136,13 @@ jobs:
                     done
                     
                     if [ "$SUCCESS" = false ]; then
-                        docker logs -f kontur-employee
-                        python3 script/tg_bot_alert.py "❌ Ветка kontur-employee/${{ env.BRANCH_NAME }} не обновлена на сервере ${{ env.SERVER_HOST }}!
+                        docker logs -f loom-employee
+                        python3 script/tg_bot_alert.py "❌ Ветка loom-employee/${{ env.BRANCH_NAME }} не обновлена на сервере ${{ env.SERVER_HOST }}!
                     📋 Подробности в Actions: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
                     
                         exit 1
                     fi
                     
                     echo "✅ Ветка ${{ env.BRANCH_NAME }} успешно обновлена и приложение работает!"
-                    python3 script/tg_bot_alert.py "✅ Ветка kontur-employee/${{ env.BRANCH_NAME }} успешно обновлена на сервере ${{ env.SERVER_HOST }}!"
+                    python3 script/tg_bot_alert.py "✅ Ветка loom-employee/${{ env.BRANCH_NAME }} успешно обновлена на сервере ${{ env.SERVER_HOST }}!"
                     EOF
