--- a/.github/requirements.txt
+++ b/.github/requirements.txt
@@ -1,20 +1,18 @@
-SQLAlchemy~=2.0.30
-asyncpg==0.29.0
-uvicorn==0.29.0
-fastapi==0.112.1
-openai==1.57.0
-httpx==0.28.1
-python-weed==0.8.0
-python-multipart
+SQLAlchemy>=2.0.43,<3.0.0
+asyncpg>=0.30.0,<1.0.0
+uvicorn[standart]>=0.37.0,<1.0.0
+uvloop>=0.21.0,<1.0.0
+fastapi>=0.118.0,<1.0.0
+hiredis>=3.2.1,<4.0.0
+redis>=6.4.0,<7.0.0
+openai>=2.2.0,<3.0.0
+aiogram>=3.22.0,<4.0.0
 
 
-hiredis==3.2.1
-redis==6.2.0
-
-aiogram==3.4.1
-tenacity==9.1.2
-opentelemetry-api==1.33.1
-opentelemetry-sdk==1.33.1
-opentelemetry-semantic-conventions==0.54b1
-opentelemetry-exporter-otlp-proto-grpc==1.33.1
-opentelemetry-proto==1.33.1
+tenacity>=9.1.2,<10.0.0
+httpx>=0.28.1,<1.0.0
+opentelemetry-api>=1.37.0,<2.0.0
+opentelemetry-sdk>=1.37.0,<2.0.0
+opentelemetry-semantic-conventions>=0.54b1,<1.0.0
+opentelemetry-exporter-otlp-proto-grpc>=1.37.0,<2.0.0
+opentelemetry-proto>=1.37.0,<2.0.0
